test/integration/syntax/stray_unrec1.pal
{6}
//

program test(input,outpt);
begin
#
end	// error
